<resources>
    <string name="app_name">VoFaz</string>
    <string name="email">email</string>
    <string name="sign">sign in your account</string>
    <string name="btn_sign">Sign In</string>
    <string name="dont_have_account">don\'t have an account?</string>
    <string name="create">Create</string>

    <string name="create_account">Create an account</string>
    <string name="full_name">full name</string>
    <string name="confirm_password">confirm password</string>
    <string name="have_account">already have an account?</string>
    <string name="login">login</string>

    <string name="hello">Hello, %1$s!</string>
    <string name="search">search</string>
    <string name="todo">To Do</string>
    <string name="completed">completed</string>
    <string name="add_first_task">Let\'s add your first task…</string>

    <string name="complete_first_task">Let\'s add your first task…</string>

    <string name="add_task">ADD Task</string>
    <string name="add_task_sub">tackle your goals in daily doses</string>
    <string name="set_icon">Set Icon</string>
    <string name="Name_task">Name The Task</string>
    <string name="name_task_hint">e.g Study Spanish</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_date">Select date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="prev_task_name">e.g Study Spanish</string>

    <string name="tomorrow_task">Tomorrow Tasks</string>
    <string name="format_date_task">%1$s Tasks</string>

    <string name="yesterday_tasks">Yesterday Tasks</string>
    <string name="password">password</string>
    <string name="email_error">invalid Email address</string>
    <string name="password_error">password should have at least 8 characters</string>
    <string name="logout">logout</string>
    <string name="name_error">Name should have more than 3 characters</string>
    <string name="password_not_equals">Password not equals</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour">%1$dh</string>
    <string name="min_with_0">0%1$d</string>
    <string name="hour_with_0">0%1$dh</string>
    <string name="min_begin">00</string>
    <string name="hour_begin">00h</string>
    <string name="time_error">You should set a valid time.</string>
    <string name="date_error">You should set a valid date.</string>
    <string name="today_task">Today tasks</string>
    <string name="pm">pm</string>
    <string name="am">am</string>


</resources>