<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_500"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_img_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_vofaz" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/login_img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textStyle="bold" />



    <com.google.android.material.textfield.TextInputLayout

        app:layout_constraintTop_toBottomOf="@id/login_img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/login_edit_layout_email"
        style="@style/Theme.VoFaz.FormInputLayout"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_email"
                style="@style/Theme.VoFaz.FormEditText"
                android:hint="@string/email" />

            <ImageView
                style="@style/Theme.VoFaz.EditTextIcon"
                android:src="@drawable/icon_user"
                android:contentDescription="@null"/>
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/login_edit_layout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/login_edit_layout_password"
        style="@style/Theme.VoFaz.FormInputLayout"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_password"
                style="@style/Theme.VoFaz.FormEditText"
                android:hint="@string/password" />

            <ImageView
                style="@style/Theme.VoFaz.EditTextIcon"
                android:src="@drawable/icon_lock"
                android:contentDescription="@null" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:gravity="bottom"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginStart="4dp"
            android:textColor="@color/orange_200"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>