<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_500"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/hello"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/main_toolbar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/app_name"
                    android:textColor="@color/orange_200"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_layout_email"
        style="@style/Theme.VoFaz.FormInputLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img_logo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_email"
                style="@style/Theme.VoFaz.FormEditText"
                android:hint="@string/search"
                android:inputType="textEmailAddress" />

            <ImageView
                style="@style/Theme.VoFaz.EditTextIcon"
                android:contentDescription="@null"
                android:src="@drawable/icon_search" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/main_btn_todo"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_200"
            android:text="@string/todo"
            android:textColor="@color/gray_500" />

        <Button
            android:id="@+id/main_btn_completed"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/completed"
            android:textColor="@color/gray_200" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"

        android:background="@drawable/main_background">

        <ImageView
            android:id="@+id/main_btn_expand"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_arrow_drop_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            android:contentDescription="@null"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_first_task"
            android:textColor="@color/gray_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_btn_expand"
            app:layout_constraintVertical_bias="0.2" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/gray_700"
                android:contentDescription="@null"/>

            <ImageView
                android:id="@+id/my_frame_layout"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/button_background_add"
                android:contentDescription="@null"/>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>